Fix the top page to make wbr effective on Firefox

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -108,7 +108,7 @@
       justify-content: center;
     }
 
-    p {
+    p span {
       margin-bottom: 1rem;
       white-space: nowrap;
     }
